multidev/codex-rs/tui/src/snapshots/codex_tui__experimental_session_control__tests__experimental_session_stale_result_unknown.snap
---
source: tui/src/experimental_session_control_tests.rs
expression: "render_projection(&cases[0], ViewFreshness::Stale,\nMutationCertainty::Unknown,)"
---
Session control prototype — facts may be prototype, unknown, or unavailable
session: loaded
identity: root=root-loaded source=live-runtime
domain lifecycle: unknown (not closed) source=unavailable
owner/runtime residency: loaded owner source=live-runtime
operations: track=available[source=live-owner] archive=unavailable(unsupported)[source=unavailable] unarchive=unavailable(not-archived)[source=thread-store]
client sync: view=stale mutation-result=unknown
team prototype: instance=team-loaded revision=7 viewer=root-loaded role=Root omitted-participants=2 omitted-events=4 source=live-owner
  event=event-a omitted-versions=3
    version=version-a producer=open root=pending retired=false
